=== SVN

* Refactored Sequelizer to use Proc#to_sexp (method provided by r2r).

* Enhanced Database.connect to accept options with string keys, so it can now accept options loaded from YAML files. Database.connect also automatically converts :username option into :user for compatibility with existing YAML configuration files for AR and DataMapper.

=== 1.0.0.1 (2008-01-03)

* Changed MySQL adapter to support specifying socket option.

* Added support for limiting and paginating datasets with fixed SQL, gotten with DB#fetch (thanks Ruy Diaz). 

* Added new Dataset#from_self method that returns a dataset selecting from the original dataset.

=== 1.0 (2008-01-02)

* Removed deprecated adapter stubs.

* Removed Sequel::Model() stub.

* Changed name to sequel_core.

* 100% code coverage.

* Fixed error behavior when sequel_model is not available.

* Fixed error behavior when parse_tree or ruby2ruby are not available.

=== 0.5.0.2 (2008-01-01)

* Fixed String#to_time to raise error correctly for invalid time stamps.

* Improved code coverage - now at 99.2%.

=== 0.5.0.1 (2007-12-31)

* Added a stub for Sequel::Model that auto-loads sequel_model.

* Changed Sequel.method_missing and Database.adapter_class to raise AdapterNotFound if an adapter could not be loaded.

* Fixed behavior of error trap in sequel command line tool.

=== 0.5 (2007-12-30)

* Removed model code into separate sub-project. Rearranged trunk into core, model and model_plugins.

=== 0.4.5 (2007-12-25)

* Added rdoc for new alter_table functionality (#109).

* Fixed update_sql with array sub-item keys (#110).

* Refactored model specs.

* Added Model#update as alias to #set.

* Refactored validations code. Renamed Model.validations? into Model.has_validations?.

* Added initial Model validations (Thanks Lance Carlson)

* Added Database#set_column_default method (thanks Jim Morris.)

* Removed warning on uninitialized @transform value (thanks Jim Morris).

=== 0.4.4.2 (2007-12-20)
