@@ -335,6 +335,11 @@ context "A MySQL database" do
     proc {db.test_connection}.should_not raise_error
   end
   
+  specify "should accept a socket option without host option" do
+    db = Sequel.mysql('sandbox', :user => 'root', :socket => '/tmp/mysql.sock')
+    proc {db.test_connection}.should_not raise_error
+  end
+  
   specify "should fail to connect with invalid socket" do
     db = Sequel.mysql('sandbox', :host => 'localhost', :user => 'root', :socket => 'blah')
     proc {db.test_connection}.should raise_error
