@@ -1,5 +1,7 @@
 === SVN
 
+* Changed mysql adapter to default to localhost if :host option is not specified (#114).
+
 * Refactored Sequelizer to use Proc#to_sexp (method provided by r2r).
 
 * Enhanced Database.connect to accept options with string keys, so it can now accept options loaded from YAML files. Database.connect also automatically converts :username option into :user for compatibility with existing YAML configuration files for AR and DataMapper.
